--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,11 +4,13 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
+    
     {
-        "name": "Dart",
-        "type": "dart",
-        "request": "launch",
-        "program": "bin/variables.dart"
+      "name": "Dart",
+      "type": "dart",
+      "request": "launch",
+      "program": "bin/variables.dart",
+      "console": "terminal"
     },
     {
       "name": "Dart",
